[package]
name = "axum_cache_auth"
version = "0.1.0"
edition = "2024"

[dependencies]
# 核心异步运行时
tokio = { version = "1.49.0", features = ["sync", "tracing"] }

# 加密和哈希
sha2 = "0.10.8"       # SHA-2 哈希算法实现
hex = "0.4.3"         # 十六进制编码/解码
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }  # JWT 令牌处理

# Web 相关
http = { version = "1.0" }        # HTTP 协议核心定义
http-body = { version = "1.0" }   # HTTP 请求/响应体处理
tower = { version = "0.5.2" }     # 模块化 HTTP 中间件框架
urlencoding = { version = "2.1" }  # URL 编码/解码

# Spring Web 框架集成
spring = { version = "0.4.7" }                  # Spring 核心框架
spring-web = { version = "0.4.13", features = ["openapi"] }  # Spring Web 框架，包含 OpenAPI 支持
schemars = "1.1.0"                              # JSON Schema 生成库，用于 OpenAPI

# 序列化和反序列化
serde = { version = "1.0.228", features = ["derive"] }  # 序列化框架
serde_json = { version = "1.0.149" }                    # JSON 序列化实现

# 时间处理
chrono = "0.4.42"  # 日期和时间处理库

# 日志
log = "0.4"  # 日志抽象库

# 缓存
redis = { version = "1.0.1", features = ["aio", "tokio-comp", "connection-manager"] }  # Redis 异步客户端
moka = { version = "0.12.12", features = ["sync"] }  # 高性能内存缓存

# 错误处理
thiserror = "2.0.17"  # 声明式错误处理
anyhow = { version = "1.0.100" }  # 任意错误类型处理

# 异步编程工具
async-trait = "0.1"  # 异步 trait 支持